kubernetes/istio/virtual-service/v1/orders-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orders-virtualservice
  namespace: cloud
spec:
  hosts:
    - orders-microservice-service
  http:
    - route:
        - destination:
            host: orders-microservice-service
            subset: v1
