kubernetes/istio/virtual-service/v1/products-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: products-virtualservice
  namespace: cloud
spec:
  hosts:
    - products-microservice-service
  http:
    - route:
        - destination:
            host: products-microservice-service
            subset: v1
