kubernetes/istio/virtual-service/v1/users-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: users-virtualservice
  namespace: cloud
spec:
  hosts:
    - users-microservice-service
  http:
    - route:
        - destination:
            host: users-microservice-service
            subset: v1
